Fix header z-index issue after animation

--- a/styles/header.css
+++ b/styles/header.css
@@ -80,5 +80,6 @@ header{
 @keyframes fade-in{
   to{
     opacity: 1;
+    z-index: 5;
   }
 }
